[project]
name = "dva"
version = "0.1.0"
description = "This repository contains the code for Diffusion Variational Autoencoder for Tackling Stochasticity in Multi-Step Regression Stock Price Prediction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gluonts>=0.16.0",
    "lightning>=2.5.1",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "threadpoolctl>=3.6.0",
    "torch>=2.6.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
